# first-principles-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml
api/: pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0153c1191149_add_train_stop_distance_tables.py  28e9bb5425c7_add_straight_line_acceleration_tables.py  45f13eddcf22_add_river_jump_velocity_schema_and_.py  4cd2b1849387_add_bird_instantaneous_velocity_tables.py  54ad34de00bb_add_squirrel_position_and_velocity_.py  c1b226311b81_add_relay_catchup_time_tables.py  fe0e12375e1e_initial_migration.py
api/app/: config.py  db.py  main.py
api/app/core/: errors.py  logging.py
api/app/models/: bird_instantaneous_velocity.py  drop_time.py  freefall.py  relay_catchup_time.py  river_jump_velocity.py  squirrel_position_and_velocity_vectors.py  straight_line_acceleration.py  train_stop_distance.py
api/app/routers/: bird_instantaneous_velocity.py  drop_time.py  freefall.py  relay_catchup_time.py  river_jump_velocity.py  squirrel_position_and_velocity_vectors.py  straight_line_acceleration.py  train_stop_distance.py
api/app/schemas/: bird_instantaneous_velocity.py  drop_time.py  freefall.py  relay_catchup_time.py  river_jump_velocity.py  squirrel_position_and_velocity_vectors.py  straight_line_acceleration.py  train_stop_distance.py
api/tests/: conftest.py  test_bird_instantaneous_velocity.py  test_drop_time.py  test_relay_catchup_time.py  test_river_jump_velocity.py  test_squirrel_position_and_velocity_vectors.py  test_straight_line_acceleration.py  test_train_stop_distance.py
(+19 files in other folders)
